feat(cc-tx-viz): update cross chain events log for fabric transactions
