# packages/cactus-plugin-ledger-connector-fabric/src/main/typescript/get-transaction-receipts-list/get-transaction-receipts-list-endpoint-v1.ts
@@ -1,102 +1,0 @@
-import { Express, Request, Response } from "express";
-
-import {
-  Logger,
-  LoggerProvider,
-  LogLevelDesc,
-  Checks,
-  IAsyncProvider,
-} from "@hyperledger/cactus-common";
-
-import {
-  IWebServiceEndpoint,
-  IExpressRequestHandler,
-  IEndpointAuthzOptions,
-} from "@hyperledger/cactus-core-api";
-
-import { registerWebServiceEndpoint } from "@hyperledger/cactus-core";
-
-import { PluginLedgerConnectorFabric } from "../plugin-ledger-connector-fabric";
-// import { RunTransactionRequest } from "../generated/openapi/typescript-axios";
-import OAS from "../../json/openapi.json";
-
-export interface IGetTransactionReceiptsListEndpointV1Options {
-  logLevel?: LogLevelDesc;
-  connector: PluginLedgerConnectorFabric;
-}
-
-export class GetTransactionReceiptsListEndpointV1
-  implements IWebServiceEndpoint {
-  private readonly log: Logger;
-
-  constructor(
-    public readonly opts: IGetTransactionReceiptsListEndpointV1Options,
-  ) {
-    const fnTag = "GetTransactionReceiptsListEndpointV1#constructor()";
-
-    Checks.truthy(opts, `${fnTag} options`);
-    Checks.truthy(opts.connector, `${fnTag} options.connector`);
-
-    this.log = LoggerProvider.getOrCreate({
-      label: "get-transaction-receipts-list-endpoint-v1",
-      level: opts.logLevel || "INFO",
-    });
-  }
-
-  getAuthorizationOptionsProvider(): IAsyncProvider<IEndpointAuthzOptions> {
-    // TODO: make this an injectable dependency in the constructor
-    return {
-      get: async () => ({
-        isProtected: true,
-        requiredRoles: [],
-      }),
-    };
-  }
-
-  public getExpressRequestHandler(): IExpressRequestHandler {
-    return this.handleRequest.bind(this);
-  }
-
-  public get oasPath(): typeof OAS.paths["/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-fabric/get-transaction-receipts-list"] {
-    return OAS.paths[
-      "/api/v1/plugins/@hyperledger/cactus-plugin-ledger-connector-fabric/get-transaction-receipts-list"
-    ];
-  }
-
-  public getPath(): string {
-    return this.oasPath.get["x-hyperledger-cactus"].http.path;
-  }
-
-  public getVerbLowerCase(): string {
-    return this.oasPath.get["x-hyperledger-cactus"].http.verbLowerCase;
-  }
-
-  public getOperationId(): string {
-    return this.oasPath.get.operationId;
-  }
-
-  public async registerExpress(
-    expressApp: Express,
-  ): Promise<IWebServiceEndpoint> {
-    await registerWebServiceEndpoint(expressApp, this);
-    return this;
-  }
-
-  async handleRequest(req: Request, res: Response): Promise<void> {
-    const fnTag = "GetTransactionReceiptsListEndpointV1#handleRequest()";
-    const verbUpper = this.getVerbLowerCase().toUpperCase();
-    this.log.debug(`${verbUpper} ${this.getPath()}`);
-
-    try {
-      // const reqBody = req.body as RunTransactionRequest;
-      const resBody = await this.opts.connector.getTransactionReceiptsList();
-      res.status(200);
-      res.json(resBody);
-    } catch (ex) {
-      this.log.error(`${fnTag} failed to serve request`, ex);
-      res.status(500);
-      res.statusMessage = ex.message;
-      res.json({ error: ex.stack });
-    }
-  }
-}
